[gd_scene load_steps=93 format=3 uid="uid://y81o6k1fabte"]

[ext_resource type="Texture2D" uid="uid://ccmk8d113ukoa" path="res://art/privious/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cj606bldnvivo" path="res://script/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://ber4jxhe4r77m" path="res://art/people/attack/FR_Adventurer_Slash_000.png" id="2_y4r1p"]
[ext_resource type="Texture2D" uid="uid://ddfr55sg32aol" path="res://art/people/attack/FR_Adventurer_Slash_001.png" id="3_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dsykmqnfpjkbx" path="res://art/people/attack/FR_Adventurer_Slash_002.png" id="4_3v2ag"]
[ext_resource type="Texture2D" uid="uid://bix2d1vl4y2wg" path="res://art/people/attack/FR_Adventurer_Slash_003.png" id="5_jej6c"]
[ext_resource type="Texture2D" uid="uid://dj4pjdwtn3glv" path="res://art/people/attack/FR_Adventurer_Slash_004.png" id="6_f1ej7"]
[ext_resource type="Texture2D" uid="uid://c31c847bdhh7x" path="res://art/people/attack/FR_Adventurer_Slash_005.png" id="7_oprun"]
[ext_resource type="Texture2D" uid="uid://tfx2dpcm7ctd" path="res://art/people/attack/FR_Adventurer_Slash_006.png" id="8_a8ls1"]
[ext_resource type="Texture2D" uid="uid://hem1lsy45qaq" path="res://art/people/attack/FR_Adventurer_Slash_007.png" id="9_qfm1y"]
[ext_resource type="Texture2D" uid="uid://dfupmqfxobbjb" path="res://art/people/die/FR_Adventurer_Dead_000.png" id="11_2dvfe"]
[ext_resource type="Texture2D" uid="uid://djyaq38ydyng8" path="res://art/people/die/FR_Adventurer_Dead_001.png" id="12_giy8y"]
[ext_resource type="Texture2D" uid="uid://csr6m7utxolml" path="res://art/people/die/FR_Adventurer_Dead_002.png" id="13_fdfoy"]
[ext_resource type="Texture2D" uid="uid://di8spdy8nacch" path="res://art/people/die/FR_Adventurer_Dead_003.png" id="14_hhpqf"]
[ext_resource type="Texture2D" uid="uid://mg66nw3eku00" path="res://art/people/die/FR_Adventurer_Dead_004.png" id="15_g5jhy"]
[ext_resource type="Texture2D" uid="uid://cwjclf1vjq6iu" path="res://art/people/die/FR_Adventurer_Dead_005.png" id="16_holxr"]
[ext_resource type="Texture2D" uid="uid://b51d3rcstmfd8" path="res://art/people/die/FR_Adventurer_Dead_006.png" id="17_mx1m4"]
[ext_resource type="Texture2D" uid="uid://c73thx2uw5bbb" path="res://art/people/die/FR_Adventurer_Dead_007.png" id="18_4gjji"]
[ext_resource type="Texture2D" uid="uid://dk8o68gpumlis" path="res://art/people/die/FR_Adventurer_Dead_008.png" id="19_u2ulf"]
[ext_resource type="Texture2D" uid="uid://d2tp0j7n7g6fa" path="res://art/people/idel/FR_Adventurer_IdleBlink_000.png" id="20_6e8lb"]
[ext_resource type="Texture2D" uid="uid://c0pj312chxjxg" path="res://art/people/idel/FR_Adventurer_IdleBlink_001.png" id="21_2gdjj"]
[ext_resource type="Texture2D" uid="uid://cfg8e30d4rsyw" path="res://art/people/idel/FR_Adventurer_IdleBlink_002.png" id="22_sc3ue"]
[ext_resource type="Texture2D" uid="uid://cwcq807bgfytd" path="res://art/people/idel/FR_Adventurer_IdleBlink_003.png" id="23_lxlsd"]
[ext_resource type="Texture2D" uid="uid://do0g2uqqrtgi2" path="res://art/people/idel/FR_Adventurer_IdleBlink_004.png" id="24_ha2mi"]
[ext_resource type="Texture2D" uid="uid://c2w5bqbh6c2hg" path="res://art/people/idel/FR_Adventurer_IdleBlink_005.png" id="25_apa73"]
[ext_resource type="Texture2D" uid="uid://dav4xp5hr5th6" path="res://art/people/idel/FR_Adventurer_IdleBlink_006.png" id="26_74r1k"]
[ext_resource type="Texture2D" uid="uid://btse1eoivpv2b" path="res://art/people/idel/FR_Adventurer_IdleBlink_007.png" id="27_8svfe"]
[ext_resource type="Texture2D" uid="uid://ciehpybc3mj12" path="res://art/people/idel/FR_Adventurer_IdleBlink_008.png" id="28_2a3c5"]
[ext_resource type="Texture2D" uid="uid://0vftf16ajus8" path="res://art/people/idel/FR_Adventurer_IdleBlink_009.png" id="29_42b1b"]
[ext_resource type="Texture2D" uid="uid://cqye7i04deump" path="res://art/people/idel/FR_Adventurer_IdleBlink_010.png" id="30_h7ic4"]
[ext_resource type="Texture2D" uid="uid://bybmt71ae5brx" path="res://art/people/idel/FR_Adventurer_IdleBlink_011.png" id="31_au7lq"]
[ext_resource type="Texture2D" uid="uid://cbofxaih8i4ig" path="res://art/people/walk/FR_Adventurer_Run_000.png" id="32_nubpm"]
[ext_resource type="Texture2D" uid="uid://dqorq2xmvpx84" path="res://art/people/walk/FR_Adventurer_Run_001.png" id="33_ua5cf"]
[ext_resource type="Texture2D" uid="uid://b5mpvivgcbtj8" path="res://art/people/walk/FR_Adventurer_Run_002.png" id="34_51ujp"]
[ext_resource type="Texture2D" uid="uid://be07vrq7dh0yv" path="res://art/people/walk/FR_Adventurer_Run_003.png" id="35_tk41t"]
[ext_resource type="Texture2D" uid="uid://b74yvr2fknryt" path="res://art/people/walk/FR_Adventurer_Run_004.png" id="36_fuw3a"]
[ext_resource type="Texture2D" uid="uid://58qqloakv48c" path="res://art/people/walk/FR_Adventurer_Run_005.png" id="37_8txt3"]
[ext_resource type="Texture2D" uid="uid://gm88vcqin1ec" path="res://art/people/walk/FR_Adventurer_Run_006.png" id="38_2w11d"]
[ext_resource type="Texture2D" uid="uid://bupjc8pfwtcc5" path="res://art/people/walk/FR_Adventurer_Run_007.png" id="39_770dr"]
[ext_resource type="Texture2D" uid="uid://dlxwprldkjh2l" path="res://art/people/walk/FR_Adventurer_Run_008.png" id="40_8f1cb"]
[ext_resource type="Texture2D" uid="uid://b6uei4nimew32" path="res://art/people/walk/FR_Adventurer_Run_009.png" id="41_vdulj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3vyb7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_smehm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y4r1p")
}, {
"duration": 1.0,
"texture": ExtResource("3_d2wvv")
}, {
"duration": 1.0,
"texture": ExtResource("4_3v2ag")
}, {
"duration": 1.0,
"texture": ExtResource("5_jej6c")
}, {
"duration": 1.0,
"texture": ExtResource("6_f1ej7")
}, {
"duration": 1.0,
"texture": ExtResource("7_oprun")
}, {
"duration": 1.0,
"texture": ExtResource("8_a8ls1")
}, {
"duration": 1.0,
"texture": ExtResource("9_qfm1y")
}],
"loop": true,
"name": &"attack_new",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_2dvfe")
}, {
"duration": 1.0,
"texture": ExtResource("12_giy8y")
}, {
"duration": 1.0,
"texture": ExtResource("13_fdfoy")
}, {
"duration": 1.0,
"texture": ExtResource("14_hhpqf")
}, {
"duration": 1.0,
"texture": ExtResource("15_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("16_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("17_mx1m4")
}, {
"duration": 1.0,
"texture": ExtResource("18_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("19_u2ulf")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hurt_new",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_6e8lb")
}, {
"duration": 1.0,
"texture": ExtResource("21_2gdjj")
}, {
"duration": 1.0,
"texture": ExtResource("22_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("23_lxlsd")
}, {
"duration": 1.0,
"texture": ExtResource("24_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("25_apa73")
}, {
"duration": 1.0,
"texture": ExtResource("26_74r1k")
}, {
"duration": 1.0,
"texture": ExtResource("27_8svfe")
}, {
"duration": 1.0,
"texture": ExtResource("28_2a3c5")
}, {
"duration": 1.0,
"texture": ExtResource("29_42b1b")
}, {
"duration": 1.0,
"texture": ExtResource("30_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("31_au7lq")
}],
"loop": true,
"name": &"idel_new",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_nubpm")
}, {
"duration": 1.0,
"texture": ExtResource("33_ua5cf")
}, {
"duration": 1.0,
"texture": ExtResource("34_51ujp")
}, {
"duration": 1.0,
"texture": ExtResource("35_tk41t")
}, {
"duration": 1.0,
"texture": ExtResource("36_fuw3a")
}, {
"duration": 1.0,
"texture": ExtResource("37_8txt3")
}, {
"duration": 1.0,
"texture": ExtResource("38_2w11d")
}, {
"duration": 1.0,
"texture": ExtResource("39_770dr")
}, {
"duration": 1.0,
"texture": ExtResource("40_8f1cb")
}, {
"duration": 1.0,
"texture": ExtResource("41_vdulj")
}],
"loop": true,
"name": &"walk_new",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 16.0312

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_g2els")

[node name="player_obstacle" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -14)
scale = Vector2(0.03, 0.03)
sprite_frames = SubResource("SpriteFrames_smehm")
animation = &"attack_new"
frame_progress = 0.429226
speed_scale = 2.0
offset = Vector2(0, -15)

[node name="world_cemera" type="Camera2D" parent="."]
position = Vector2(88, 46)
scale = Vector2(0.9, 0.9)
zoom = Vector2(3, 3)
limit_left = -1
limit_top = 0
limit_right = 570
limit_bottom = 255
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="world_cemera2" type="Camera2D" parent="."]
position = Vector2(41, -126)
scale = Vector2(0.9, 0.9)
zoom = Vector2(3, 3)
limit_left = -1
limit_top = 0
limit_right = 570
limit_bottom = 300
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(56, 8)

[node name="hitbox" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-56, -21)
shape = SubResource("CircleShape2D_qhqgy")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -6.0
offset_top = -4.0
offset_right = 114.0
offset_bottom = 23.0
scale = Vector2(0.1, 0.1)
value = 100.0
show_percentage = false

[node name="re_blood" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="re_blood" to="." method="_on_re_blood_timeout"]
